[package]
name = "eece5200_rust"
version = "0.1.0"
edition = "2021"
#build = "build.rs"
links = "gfortran"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cmake = "0.1"
ndarray = "0.12.1"
ndarray-linalg = "0.12.1"
rand = "0.8.5"
