cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
project(port3lib LANGUAGES C Fortran)
include(FortranCInterface)

add_library(svdc STATIC svdc.f)
add_library(port3 STATIC 
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/CABS1.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/CAMAX.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/CAXPY.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/CCOPY.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/CDOTC.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/CDOTU.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/CROTG.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/CSCAL.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/CSROT.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/CSSCAL.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/CSWAP.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/DAMAX.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/DASUM.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/DAXPY.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/DCOPY.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/DDOT.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/DNRM2.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/DROT.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/DROTG.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/DSCAL.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/DSUM.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/DSWAP.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/ICAMAX.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/ICAMIN.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/IDAMAX.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/IDAMIN.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/IDMAX.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/IDMIN.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/IIMAX.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/IIMIN.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/ISAMAX.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/ISAMIN.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/ISMAX.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/ISMIN.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/OCSSCAL.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/SAMAX.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/SASUM.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/SAXPY.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/SCASUM.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/SCOPY.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/SDOT.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/SNRM2.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/SROT.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/SROT2.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/SROTG.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/SSCAL.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/SSUM.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/SSWAP.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/CABS1.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/CAMAX.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/CAXPY.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/CCOPY.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/CDOTC.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/CDOTU.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/CROTG.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/CSCAL.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/CSROT.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/CSSCAL.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/CSWAP.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/DAMAX.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/DASUM.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/DAXPY.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/DCOPY.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/DDOT.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/DNRM2.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/DROT.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/DROTG.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/DSCAL.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/DSUM.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/DSWAP.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/ICAMAX.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/ICAMIN.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/IDAMAX.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/IDAMIN.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/IDMAX.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/IDMIN.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/IIMAX.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/IIMIN.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/ISAMAX.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/ISAMIN.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/ISMAX.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/ISMIN.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/OCSSCAL.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/SAMAX.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/SASUM.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/SAXPY.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/SCASUM.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/SCOPY.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/SDOT.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/SNRM2.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/SROT.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/SROT2.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/SROTG.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/SSCAL.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/SSUM.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/blas.d/SSWAP.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/EIGEN.d/DEIGEN.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/EIGEN.d/DHQR2.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/EIGEN.d/DORTHE.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/EIGEN.d/DORTRA.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/EIGEN.d/EIGEN.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/EIGEN.d/HQR2.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/EIGEN.d/ORTHE.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/EIGEN.d/ORTRA.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/EIGEN.d/makefile
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/A9RNTC.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/A9RNTD.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/A9RNTI.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/A9RNTL.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/A9RNTR.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/CEIL.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/D1MACH.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/DCEIL.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/DFLR.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/E9RINT.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/ENTER.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/ENTSRC.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/EPRINT.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/ERROFF.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/FDUMP.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/FLR.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/FRMATD.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/FRMATI.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/FRMATR.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/I0TK00.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/I10WID.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/I1MACH.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/I8SAVE.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/I8TSEL.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/ICEIL.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/IDCEIL.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/IDFLR.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/IFLR.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/ISTKGT.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/ISTKIN.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/ISTKMD.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/ISTKQU.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/ISTKRL.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/ISTKST.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/LEAVE.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/N5ERR.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/NERROR.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/R1MACH.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/RETSRC.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/S1MACH.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/S2MACH.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/S3MACH.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/S88FMT.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/SDUMP.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/SETERR.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/STKDMP.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/frame.d/U9DMP.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/GESS.d/DG4ECE.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/GESS.d/DGEBS.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/GESS.d/DGECE.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/GESS.d/DGEFS.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/GESS.d/DGELU.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/GESS.d/DGESS.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/GESS.d/G4ECE.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/GESS.d/GEBS.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/GESS.d/GECE.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/GESS.d/GEFS.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/GESS.d/GELU.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/GESS.d/GESS.f
    ${CMAKE_CURRENT_SOURCE_DIR}/port3.d/src.d/util.d/CDDIV.f
    )
target_link_libraries(port3 PRIVATE gfortran)
install(TARGETS port3 DESTINATION ${CMAKE_INSTALL_PREFIX})
